# quickpass

./: COPYING  README.md
addon/: .gitignore  .jpmignore  package.json
addon/data/: context_menu.js  guid.js  page_worker.js  panel_passphrase.js  passphrase.html
addon/data/lib/: empty-dir-placeholder
addon/lib/: keepassxdb.js  main.js
addon/test/: test.html
keepassx_cbind/: CMakeLists.txt  keepassx.patch
keepassx_cbind/cmake/: .FindGcrypt.cmake.swp
keepassx_cbind/src/: cbind.cpp  cbind.h
